--- a/app/src/main/res/layout/activity_parking.xml
+++ b/app/src/main/res/layout/activity_parking.xml
@@ -38,7 +38,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/spinner" />
+            android:id="@+id/stSpinner" />
 
         <ImageView
             android:layout_width="25dp"
@@ -50,7 +50,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/spinner2" />
+            android:id="@+id/etSpinner" />
 
     </LinearLayout>
 
@@ -61,12 +61,10 @@
         android:layout_gravity="center_horizontal"
         android:background="@drawable/map_singapore1" />
 
-    <EditText
-        android:layout_width="match_parent"
+    <TimePicker
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="time"
-        android:ems="10"
-        android:id="@+id/editText2" />
+        android:id="@+id/timePicker" />
 
 
 </LinearLayout>
